05-Network-Policy/deployment-with-ns-np/mario-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mario
  namespace: dev
spec:
  type: NodePort
  selector:
    app: mario
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
