05-Network-Policy/deployment-with-ns-np/mario-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mario-policy
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: mario

  policyTypes:
  - Ingress

  ingress:
  - ports:
    - protocol: TCP
      port: 8080
